--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,14 @@
         android:theme="@style/Theme.ComposeTutorial"
         tools:targetApi="31">
         <activity
+            android:name=".PlaygroundActivity1"
+            android:exported="false"
+            android:label="@string/title_activity_playground1"
+            android:theme="@style/Theme.ComposeTutorial" />
+        <activity
+            android:name=".PlaygroundActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
